workshop04/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "300"
  labels:
    name: app-ing
spec:
  ingressClassName: nginx
  rules:
    - host: wordpress-188.166.198.58.nip.io #ip address is nginx controller
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
